# SomeOldSrcCode

./: Readme  usb_bell_mobile_info
2013_08_01/latest_build/: .config  config.IPnDDL  config.IPnVTEXP  config.VIP4G  config.VIP4GEXP  config.mpci  revision
2013_08_01/latest_build/CVS/: Entries  Repository
2013_08_01/latest_build/docs/CVS/: Entries  Repository
2013_08_01/latest_build/include/: kernel.mk  netfilter.mk
2013_08_01/latest_build/include/CVS/: Entries  Repository
2013_08_01/latest_build/package/websockserver/src/test-server/: Makefile.am  Makefile.in  test-server.c
2013_08_01/latest_build/package/websockserver/src/test-server/CVS/: Entries  Repository
2013_08_01/latest_build/scripts/: arm-magic.sh
2013_08_01/latest_build/tmp/: .config-package.in  .config-target.in  .kconfig-adm5120_router_be  .kconfig-adm5120_router_le  .kconfig-amazon  .kconfig-ar7  .kconfig-ar71xx  .kconfig-at91  .kconfig-atheros  .kconfig-au1000_au1500  .kconfig-au1000_au1550  .kconfig-avr32  .kconfig-brcm47xx  .kconfig-brcm63xx  .kconfig-brcm_2_4  .kconfig-cobalt  .kconfig-coldfire  .kconfig-ep93xx  .kconfig-etrax  .kconfig-gemini  .kconfig-goldfish  .kconfig-ifxmips  .kconfig-iop32x  .kconfig-ixp4xx_generic  .kconfig-kirkwood  .kconfig-malta  .kconfig-mpc52xx  .kconfig-mpc83xx  .kconfig-octeon  .kconfig-omap35xx_generic  .kconfig-orion_generic  .kconfig-orion_harddisk  .kconfig-ppc40x  .kconfig-ppc44x  .kconfig-ps3  .kconfig-pxa  .kconfig-pxcab  .kconfig-ramips_rt288x  .kconfig-ramips_rt305x  .kconfig-rb532  (+17 more)
webif/: Makefile
webif/files/www/: index.html
(+4089 files in other folders)
